<resources>
    <string name="app_name">Gifty</string>
    <string name="welcome_message">Καλώς ήρθατε στο Gifty!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login / Sign In</string>
    <string name="btn_guest">Sign In as Guest</string>

        <string name="btn_wishlist">Η Wishlist μου</string>
    <string name="btn_suggestions">Πρότεινέ μου δώρο</string>
</resources>